feat: add atomic job completion
